--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=phpmyadminscdelsureste.ddns.net
 DB_PORT=3307
 DB_DATABASE=base_api
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD='DIABLO0409!!87'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
