--- a/.env
+++ b/.env
@@ -7,15 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
+DB_HOST=phpmyadminscdelsureste.ddns.net
+DB_PORT=3307
 DB_DATABASE=base_api
 DB_USERNAME=root
-<<<<<<< HEAD
-DB_PASSWORD=admin
-=======
 DB_PASSWORD='DIABLO0409!!87'
->>>>>>> pruebas_independientes
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
